@@ -7,12 +7,22 @@ repositories {
     }
 }
 
+sourceSets {
+    test {
+        scala {
+            srcDirs = ['tests/src/test/scala']
+        }
+    }
+}
+
+def akkaVersion = '2.5.1'
+
 dependencies {
     compile name: 'ojdbc8'
 //    compile "org.scala-lang:scala-library:${gradle.scala.version}"
     compile "org.scala-lang:scala-library:2.12.2"
-    compile 'com.typesafe.akka:akka-cluster_2.12:2.5.1'
-    compile 'com.typesafe.akka:akka-slf4j_2.12:2.5.1'
+    compile group: 'com.typesafe.akka', name: 'akka-cluster_2.12', version: akkaVersion
+    compile group: 'com.typesafe.akka', name: 'akka-slf4j_2.12', version: akkaVersion
 
     compile group: 'com.typesafe.play', name: 'play-json_2.12', version: '2.6.0-M7'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
@@ -27,3 +37,13 @@ dependencies {
 //tasks.withType(ScalaCompile) {
 //    scalaCompileOptions.additionalParameters = gradle.scala.compileFlags
 //}
+
+tasks.withType(ScalaCompile) {
+    configure(scalaCompileOptions.forkOptions) {
+        memoryMaximumSize = '1g'
+        jvmArgs = ['-XX:MaxPermSize=512m', '-DsocksProxyHost=127.0.0.1', '-DsocksProxyPort=1080']
+    }
+    scalaCompileOptions.with {
+        force = true
+    }
+}
